--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.1.4
+  http: ^0.13.3
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
 dev_dependencies:
