--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   get: ^4.1.4
   http: ^0.13.3
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
-
+  shared_preferences: ^2.0.6
+  fluttertoast: ^8.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
