--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   shared_preferences: ^2.0.6
   fluttertoast: ^8.0.7
+  webview_flutter: ^1.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
