--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   shared_preferences: ^2.0.6
   webview_flutter: ^2.0.12
-
+  path_provider: ^2.0.2
+  dio: ^4.0.0
+  country_list_pick: ^1.0.1+5
 dev_dependencies:
   flutter_test:
     sdk: flutter
