--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   shared_preferences: ^2.0.6
   fluttertoast: ^8.0.7
+  dio: ^4.0.0
+  path_provider: ^2.0.2
+  ext_storage: ^1.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
