--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^4.0.0
   path_provider: ^2.0.2
   ext_storage: ^1.0.3
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
