--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.0.2
   ext_storage: ^1.0.3
   flutter_spinkit: ^4.1.2
+  image_gallery_saver: ^1.6.9
+  permission_handler: ^8.1.4+2
 
 dev_dependencies:
   flutter_test:
