--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.0.2
   shared_preferences: ^2.0.6
   webview_flutter: ^2.0.12
+  flutter_spinkit: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
