--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^2.0.6
   webview_flutter: ^2.0.12
   flutter_spinkit: ^3.1.0
+  image_gallery_saver: ^1.6.9
+  permission_handler: ^8.1.4+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
