--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   image_gallery_saver: ^1.6.9
   flutter_pdfview: ^1.1.0
   permission_handler: ^8.1.4+2
+  flutter_downloader: 1.6.1
+  syncfusion_flutter_pdfviewer: ^19.1.56-beta
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
