--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get: ^4.1.4
-  http: ^0.13.3
+  cupertino_icons: ^1.0.5
+  get: ^4.0.0-nullsafety.2
+  http: ^0.13.0-nullsafety.0
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
-  shared_preferences: ^2.0.6
-  fluttertoast: ^8.0.7
+  shared_preferences: ^2.0.0-nullsafety
+  fluttertoast: ^8.0.1-nullsafety.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  platform: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
